fix: missing spacing variable

--- a/src/themes/pro.css
+++ b/src/themes/pro.css
@@ -11,6 +11,7 @@
 
 :root {
   --sans: "Inter";
+  --spacing: 0.25rem;
 
   --radius: 0.25rem;
   --radius-sm: calc(var(--radius) / 2);
